--- a/popup.html
+++ b/popup.html
@@ -6,18 +6,17 @@
  -->
 <html>
   <head>
-    <title>Getting Started Extension's Popup</title>
+    <title>Popup</title>
     <style>
       body {
         font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
         font-size: 100%;
+        max-width: 100%;
+        min-width: 250px;
       }
       #status {
         /* avoid an excessively wide status text */
-        white-space: pre;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        max-width: 400px;
+        /*overflow: hidden;*/
       }
     </style>
 
@@ -30,8 +29,12 @@
     <script src="popup.js"></script>
   </head>
   <body>
-    <div id="status"></div>
-    <img id="image-result" hidden>
+      <form id="sampleText" action="http://www.youtube.com/results" method="get" target="_blank">
+          <input id="searchBar" name="search_query" type="text" maxlength="256" autofocus/>
+          <input type="submit" value="Sjearch"/>
+
+
+      </form>
   </body>
 </html>
 
